# src/Http/IncomingRequest.php
@@ -46,6 +46,7 @@ final class IncomingRequest
             [
                 'authorization' => 'HTTP_AUTHORIZATION',
                 'x-session-token' => 'HTTP_X_SESSION_TOKEN',
+                'accept-language' => 'HTTP_ACCEPT_LANGUAGE',
             ] as $lower => $serverKey
         ) {
             if (!isset($headers[$lower]) && isset($_SERVER[$serverKey])
@@ -58,11 +59,28 @@ final class IncomingRequest
 
         $query = [];
         $qs = \parse_url($uri, PHP_URL_QUERY);
-        if (\is_string($qs) && $qs !== '') {
+        if (!\is_string($qs) || $qs === '') {
+            $qs = '';
+            foreach (['QUERY_STRING', 'REDIRECT_QUERY_STRING'] as $serverQueryKey) {
+                if (isset($_SERVER[$serverQueryKey]) && \is_string($_SERVER[$serverQueryKey])
+                    && $_SERVER[$serverQueryKey] !== '') {
+                    $qs = $_SERVER[$serverQueryKey];
+                    break;
+                }
+            }
+        }
+        if ($qs !== '') {
             \parse_str($qs, $parsed);
             if (\is_array($parsed)) {
                 /** @var array<string, mixed> $query */
                 $query = $parsed;
+            }
+        }
+
+        // Some front controllers strip the query from REQUEST_URI but PHP still fills $_GET.
+        foreach (['locale', 'lang'] as $qk) {
+            if (!\array_key_exists($qk, $query) && isset($_GET[$qk]) && \is_string($_GET[$qk]) && $_GET[$qk] !== '') {
+                $query[$qk] = $_GET[$qk];
             }
         }
 
